# Bare-Metal-1.58-Bit-Ternary-Vision-Engine-Apple-Silicon-

./: .gitignore  CMakeLists.txt  README.md  benchmark_mac.cpp  benchmark_mac.hpp  export_onnx.py  main.cpp
